--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     </head>
     <body>
 
-    </body><!-- Header -->
+    </body>
+    <!-- Header -->
         <header class="header">
             <div class="container">
                 <div class="header__inner">
@@ -132,5 +133,76 @@
                 </div>
             </div>
         </header>
+
+    <!-- Hero -->
+        <section class="hero" style="height: 50000px;">
+            <div class="container">
+                <div class="hero__inner">
+                    <!-- Hero Media -->
+                    <div class="hero__media">
+                        <div class="hero__img-wrap">
+                            <img src="./assets/img/pet-01.png" alt="" class="hero__img">
+
+                            <!-- Decorators -->
+                            <img src="./assets/img/decor-bottom.svg" alt="" class="hero__decor hero__decor--bottom">
+                            <img src="./assets/img/decor-top.svg" alt="" class="hero__decor hero__decor--top">
+                        </div>
+
+                        <div class="hero__img-wrap hero__img-wrap--small">
+                            <img src="./assets/img/pet-02.png" alt="" class="hero__img">
+                        </div>
+
+                        <div class="hero__list">
+                            <!-- Hero list item 1  -->
+                            <div class="hero-list-item">
+                                <img src="./assets/img/pet-03.png" alt="" class="hero-list-item__thumb">
+                                <div class="hero-list-item__info">
+                                    <p class="hero-list-item__title">
+                                        Pet Health
+                                    </p>
+                                    <div class="hero-list-item__skeleton"></div>
+                                    <div class="hero-list-item__skeleton" style="--width: 39px;"></div>
+                                </div>
+                            </div>
+
+                            <span class="hero-list-item__separate"></span>
+
+                            <!-- Hero list item 2  -->
+                            <div class="hero-list-item">
+                                <img src="./assets/img/pet-04.png" alt="" class="hero-list-item__thumb">
+                                <div class="hero-list-item__info">
+                                    <p class="hero-list-item__title">
+                                        Pet care
+                                    </p>
+                                    <div class="hero-list-item__skeleton"></div>
+                                    <div class="hero-list-item__skeleton" style="--width: 39px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Hero content -->
+                    <section class="hero__content">
+                        <div class="hero__heading">
+                            Established & Trusted Pet Care Service
+                        </div>
+                        <div class="hero__desc">
+                            Discover a wide variety of Pawsitive services to choose from, including daycare, private walks, office duty and spa.
+                        </div>
+                        <div class="hero__row">
+                            <a href="#!" class="btn btn--primary hero__cta-btn" >
+                                Book a Meet
+                                <span class="btn__icon">
+                                    <svg width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M3.48584 1.5L5.98584 4L3.48584 6.5" stroke="var(--primary-color)" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </span>
+                            </a>
+                            <a href="#!" class="hero__cta-link">Schedule a Call</a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
