--- a/index.html
+++ b/index.html
@@ -93,10 +93,8 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
     </head>
-    <body>
-
-    </body>
-    <!-- Header -->
+    <body style="height: 5000px">
+        <!-- Header -->
         <header class="header">
             <div class="container">
                 <div class="header__inner">
@@ -134,34 +132,57 @@
             </div>
         </header>
 
-    <!-- Hero -->
-        <section class="hero" style="height: 50000px;">
+        <!-- Hero -->
+        <section class="hero">
             <div class="container">
                 <div class="hero__inner">
                     <!-- Hero Media -->
                     <div class="hero__media">
                         <div class="hero__img-wrap">
-                            <img src="./assets/img/pet-01.png" alt="" class="hero__img">
+                            <img
+                                src="./assets/img/pet-01.png"
+                                alt=""
+                                class="hero__img"
+                            />
 
                             <!-- Decorators -->
-                            <img src="./assets/img/decor-bottom.svg" alt="" class="hero__decor hero__decor--bottom">
-                            <img src="./assets/img/decor-top.svg" alt="" class="hero__decor hero__decor--top">
+                            <img
+                                src="./assets/img/decor-bottom.svg"
+                                alt=""
+                                class="hero__decor hero__decor--bottom"
+                            />
+                            <img
+                                src="./assets/img/decor-top.svg"
+                                alt=""
+                                class="hero__decor hero__decor--top"
+                            />
                         </div>
 
                         <div class="hero__img-wrap hero__img-wrap--small">
-                            <img src="./assets/img/pet-02.png" alt="" class="hero__img">
+                            <img
+                                src="./assets/img/pet-02.png"
+                                alt=""
+                                class="hero__img"
+                            />
                         </div>
 
                         <div class="hero__list">
                             <!-- Hero list item 1  -->
                             <div class="hero-list-item">
-                                <img src="./assets/img/pet-03.png" alt="" class="hero-list-item__thumb">
+                                <img
+                                    src="./assets/img/pet-03.png"
+                                    alt=""
+                                    class="hero-list-item__thumb"
+                                />
                                 <div class="hero-list-item__info">
                                     <p class="hero-list-item__title">
                                         Pet Health
                                     </p>
                                     <div class="hero-list-item__skeleton"></div>
-                                    <div class="hero-list-item__skeleton" style="--width: 39px;"></div>
+                                    <div
+                                        class="hero-list-item__skeleton"
+                                        style="--width: 39px"
+                                    ></div>
                                 </div>
                             </div>
 
@@ -169,13 +190,20 @@
 
                             <!-- Hero list item 2  -->
                             <div class="hero-list-item">
-                                <img src="./assets/img/pet-04.png" alt="" class="hero-list-item__thumb">
+                                <img
+                                    src="./assets/img/pet-04.png"
+                                    alt=""
+                                    class="hero-list-item__thumb"
+                                />
                                 <div class="hero-list-item__info">
                                     <p class="hero-list-item__title">
                                         Pet care
                                     </p>
                                     <div class="hero-list-item__skeleton"></div>
-                                    <div class="hero-list-item__skeleton" style="--width: 39px;"></div>
+                                    <div
+                                        class="hero-list-item__skeleton"
+                                        style="--width: 39px"
+                                    ></div>
                                 </div>
                             </div>
                         </div>
@@ -187,22 +215,239 @@
                             Established & Trusted Pet Care Service
                         </div>
                         <div class="hero__desc">
-                            Discover a wide variety of Pawsitive services to choose from, including daycare, private walks, office duty and spa.
+                            Discover a wide variety of Pawsitive services to
+                            choose from, including daycare, private walks,
+                            office duty and spa.
                         </div>
                         <div class="hero__row">
-                            <a href="#!" class="btn btn--primary hero__cta-btn" >
+                            <a href="#!" class="btn btn--primary hero__cta-btn">
                                 Book a Meet
                                 <span class="btn__icon">
-                                    <svg width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M3.48584 1.5L5.98584 4L3.48584 6.5" stroke="var(--primary-color)" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <svg
+                                        width="9"
+                                        height="8"
+                                        viewBox="0 0 9 8"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M3.48584 1.5L5.98584 4L3.48584 6.5"
+                                            stroke="var(--primary-color)"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
                                     </svg>
                                 </span>
                             </a>
-                            <a href="#!" class="hero__cta-link">Schedule a Call</a>
+                            <a href="#!" class="hero__cta-link"
+                                >Schedule a Call</a
+                            >
                         </div>
                     </section>
                 </div>
             </div>
         </section>
+
+        <main>
+            <!-- About -->
+            <section class="about">
+                <div class="container">
+                    <div class="about__inner">
+                        <section class="about__content">
+                            <p class="about__label">// About //</p>
+                            <h2 class="about__heading section__heading">
+                                Best Agency For Your Pet.
+                            </h2>
+                            <p class="about__desc section__desc">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <div class="about__checklist">
+                                <span class="about__check-item">
+                                    Certified Groomer
+                                </span>
+                                <span class="about__check-item">
+                                    Animal Lover
+                                </span>
+                                <span class="about__check-item">
+                                    14+ Years Experience
+                                </span>
+                                <span class="about__check-item">
+                                    Pet Parent Of 3 Dogs
+                                </span>
+                            </div>
+                        </section>
+                        <div class="about__media">
+                            <!-- About card -->
+                            <div class="about__card">
+                                <b class="about__card--title">20+</b>
+                                <p class="about__card--desc">
+                                    Years Experience
+                                </p>
+                                <img
+                                    src="./assets/img/about-decor-01.svg"
+                                    alt=""
+                                    class="about__card-decor"
+                                />
+                            </div>
+
+                            <!-- About img wrapper -->
+                            <figure class="about__img-wrap">
+                                <img
+                                    src="./assets/img/about-img-01.png"
+                                    alt=""
+                                    class="about__img"
+                                />
+                            </figure>
+
+                            <!-- About decor -->
+                            <img
+                                src="./assets/img/about-decor-02.svg"
+                                alt=""
+                                class="about__media-decor"
+                            />
+                        </div>
+                        <div class="about__media">
+                            <figure
+                                class="about__img-wrap about__img-wrap--bottom"
+                            >
+                                <img
+                                    src="./assets/img/about-img-02.png"
+                                    alt=""
+                                    class="about__img about__img--bottom"
+                                />
+
+                                <!-- Decorators -->
+                                <div>
+                                    <!-- 03 -->
+                                    <img
+                                        src="./assets/img/about-decor-03.svg"
+                                        alt=""
+                                        class="about__decor-img"
+                                    />
+                                    <!-- 04 -->
+                                    <img
+                                        src="./assets/img/about-decor-04.svg"
+                                        alt=""
+                                        class="about__decor-img"
+                                    />
+                                    <!-- 05 -->
+                                    <img
+                                        src="./assets/img/about-decor-05.svg"
+                                        alt=""
+                                        class="about__decor-img"
+                                    />
+                                    <!-- 06 -->
+                                    <img
+                                        src="./assets/img/about-decor-06.svg"
+                                        alt=""
+                                        class="about__decor-img"
+                                    />
+                                    <!-- 07 -->
+                                    <img
+                                        src="./assets/img/about-decor-07.svg"
+                                        alt=""
+                                        class="about__decor-img"
+                                    />
+                                    <!-- 08 -->
+                                    <img
+                                        src="./assets/img/about-decor-08.svg"
+                                        alt=""
+                                        class="about__decor-img"
+                                    />
+                                </div>
+                            </figure>
+                        </div>
+                        <section class="about__content">
+                            <h2 class="section__heading">
+                                Taking A Vacation? So Is Your Pet.
+                            </h2>
+                            <p class="section__desc about__desc-bottom">
+                                We offer long-term and short-term boarding.
+                                Every dog has its own private, spacious room and
+                                daily individual time in our large play yard.
+                            </p>
+                            <div class="tab">
+                                <ul class="tab__list">
+                                    <li class="tab__item tab__item--active">
+                                        <!-- 1 -->
+                                        <img
+                                            src="./assets/icons/home.png"
+                                            alt=""
+                                            class="tab__icon"
+                                        />
+                                        <span class="tab__title">
+                                            Pet Boarding
+                                        </span>
+                                    </li>
+                                    <!-- 2 -->
+                                    <li class="tab__item">
+                                        <img
+                                            src="./assets/icons/health.png"
+                                            alt=""
+                                            class="tab__icon"
+                                        />
+                                        <span class="tab__title">
+                                            Pet Boarding
+                                        </span>
+                                    </li>
+                                    <!-- 3 -->
+                                    <li class="tab__item">
+                                        <img
+                                            src="./assets/icons/bag.png"
+                                            alt=""
+                                            class="tab__icon"
+                                        />
+                                        <span class="tab__title">
+                                            Pet Boarding
+                                        </span>
+                                    </li>
+                                </ul>
+                                <div class="tab__contents">
+                                    <!-- Tab content 1 -->
+                                    <div
+                                        class="tab__content-item tab__content-item--active"
+                                    >
+                                        <p class="tab__content-desc">
+                                            While you're on holiday, here's
+                                            where your furry friends will spend
+                                            their time 1.
+                                        </p>
+                                        <a href="#!" class="tab__content-more">
+                                            View more
+                                        </a>
+                                    </div>
+
+                                    <!-- Tab content 2 -->
+                                    <div class="tab__content-item">
+                                        <p class="tab__content-desc">
+                                            While you're on holiday, here's
+                                            where your furry friends will spend
+                                            their time 2.
+                                        </p>
+                                        <a href="#!" class="tab__content-more">
+                                            View more
+                                        </a>
+                                    </div>
+
+                                    <!-- Tab content 3 -->
+                                    <div class="tab__content-item">
+                                        <p class="tab__content-desc">
+                                            While you're on holiday, here's
+                                            where your furry friends will spend
+                                            their time 3.
+                                        </p>
+                                        <a href="#!" class="tab__content-more">
+                                            View more
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
